--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -5,7 +5,8 @@
     width: 20%
     h2
       text-align: center
-
+  mat-form-field, button
+    margin: 0 auto
 
 #overview-stats
   display: flex
@@ -24,3 +25,10 @@
       text-align: left
       font-size: 28px
       padding: 12px
+
+#armor-class
+  display: flex
+  justify-content: center
+  div
+    width: 48%
+
