--- a/src/styles.sass
+++ b/src/styles.sass
@@ -24,10 +24,15 @@ h2.section-subtitle
   flex-flow: row
   flex-wrap: wrap
   mat-card
+    .edit
+      position: absolute
+      top: 4px
+      right: 4px
     width: 85%
     text-align: center
     min-height: 50%
     h4
       text-align: center
+      margin-bottom: 32px
     strong
       font-size: 28px
