--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
     <li><a routerLink="/character" routerLinkActive="active">Character</a></li>
     <li><a routerLink="/adventure-log" routerLinkActive="active">Adventure Log</a></li>
   </ul>
+  <button mat-raised-button color="primary" (click)="exportGame()">Export Character<mat-icon>arrow_downward</mat-icon></button>
 </mat-toolbar>
 <router-outlet></router-outlet>
+
