--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -3,6 +3,7 @@ mat-toolbar
     text-decoration: none
     color: rgba(0,0,0,.87)
   ul
+    flex: 1 1 auto
     li
       list-style-type: none
       height: 100%
