--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,7 +1,9 @@
-<character-overview [character]="character"></character-overview>
-<character-attributes [character]="character"></character-attributes>
-<character-derived-attributes [character]="character"> </character-derived-attributes>
-<character-experience [character]="character"></character-experience>
-<character-purse [character]="character"></character-purse>
-<character-inventory [character]="character"></character-inventory>
-<character-notes [character]="character"></character-notes>
+<div>
+  <character-overview ></character-overview>
+  <character-attributes ></character-attributes>
+  <character-derived-attributes ></character-derived-attributes>
+  <character-experience ></character-experience>
+  <character-purse ></character-purse>
+  <character-inventory ></character-inventory>
+  <character-notes ></character-notes>
+</div>
