Changes from Ameer call

--- a/src/app/show-character/character-derived-attributes/character-derived-attributes.component.html
+++ b/src/app/show-character/character-derived-attributes/character-derived-attributes.component.html
@@ -13,6 +13,8 @@
       <mat-divider></mat-divider>
       <mat-list-item>Continuous Maximum Effort: <strong>{{character.continuousMaximumEffort()}} minutes</strong></mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item>Total Weight: <strong>{{character.weight + character.load()}}cn</strong></mat-list-item>
+      <mat-divider></mat-divider>
     </mat-list>
   </mat-expansion-panel>
 </div>
