--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -185,11 +185,11 @@
       <mat-divider></mat-divider>
       <mat-list-item>Movement Rating: {{character.movementRating()}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>Pace: {{character.movementRating() / 6}}</mat-list-item>
+      <mat-list-item>1 Pace: {{character.movementRating() / 6}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>2x Pace: {{character.movementRating() / 3}}</mat-list-item>
+      <mat-list-item>2 Pace: {{character.movementRating() / 3}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item>3x Pace: {{character.movementRating() / 2}}</mat-list-item>
+      <mat-list-item>3 Pace: {{character.movementRating() / 2}}</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
     <mat-list *ngIf="editing=='movement'">
