--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -6,3 +6,14 @@
 mat-card
   width: 13%
 
+mat-expansion-panel
+  width: 75%
+  margin: 0 auto
+  .saving-throw-content
+    display: flex
+    justify-content: space-evenly
+    div
+      width: 45%
+
+
+
