--- a/src/app/adventure-log/experience-blocks/experience-blocks.component.sass
+++ b/src/app/adventure-log/experience-blocks/experience-blocks.component.sass
@@ -1,5 +1,13 @@
 #blocks-section
+  h3
+    text-align: center
   div
     width: 100%
     mat-form-field
       width: 100%
+  .add-experience
+    text-align: center
+    button
+      margin: 16px auto
+  .description
+    width: 50%
