--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -1,21 +1,15 @@
 <h2 class="section-subtitle">Inventory - {{character.load()}} / {{character.maximumLoad()}}</h2>
-<div class="container" id="inventory">
+<div class="container" id="inventory" cdkDropListGroup>
   <mat-card>
     <mat-list>
       <h2>Weapons:</h2>
-      <div *ngFor="let weapon of character.weapons">
-        <mat-list-item>{{weapon.inventoryString()}}</mat-list-item>
-        <mat-divider></mat-divider>
-      </div>
+      <item-list [items]="character.weapons"></item-list>
     </mat-list>
   </mat-card>
   <mat-card>
     <mat-list>
       <h2>Armor:</h2>
-      <div *ngFor="let armor of character.armor">
-        <mat-list-item>{{armor.inventoryString()}}</mat-list-item>
-        <mat-divider></mat-divider>
-      </div>
+      <item-list [items]="character.armor"></item-list>
     </mat-list>
   </mat-card>
   <mat-card>
@@ -29,11 +23,6 @@
   </mat-card>
   <mat-card *ngFor="let si of character.slung_items">
     <h2>{{si.inventoryString()}}</h2>
-    <mat-list>
-      <div *ngFor="let item of si.contents">
-        <mat-list-item>{{item.inventoryString()}}</mat-list-item>
-        <mat-divider></mat-divider>
-      </div>
-    </mat-list>
+    <item-list [items]="si.contents"></item-list>
   </mat-card>
 </div>
