--- a/src/app/show-character/character-inventory/character-inventory.component.sass
+++ b/src/app/show-character/character-inventory/character-inventory.component.sass
@@ -2,4 +2,11 @@
   mat-card
     width: 30%
     margin: 32px auto
-
+mat-list-item
+  position: relative
+.mat-list-actions
+  position: absolute
+  right: 12px
+  bottom: 4px
+button.edit-item-button mat-icon
+  color: white
