Changes to HP, AC, abilities, purse, and some items stuff

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
 <div>
   <div>
     <div>
-      <button mat-raised-button color="primary" (click)="newCharacter()">Create New Character
-        <mat-icon>arrow_upwards</mat-icon>
+      <button class="new-character" mat-raised-button color="primary" (click)="newCharacter()">Create New Character
+        <mat-icon>person</mat-icon>
       </button>
     <button mat-raised-button color="primary" (click)="uploader.click()">Import Existing Character
       <mat-icon>arrow_upwards</mat-icon>
