--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -5,10 +5,11 @@ div
   flex-flow: column
   justify-content: center
   button
-    margin: 0 auto
+    margin: 16px auto
 h1
   width: 100%
   text-align: center
 
 input
   display: none
+
