--- a/src/app/show-character/character-attributes/character-attributes.component.html
+++ b/src/app/show-character/character-attributes/character-attributes.component.html
@@ -2,33 +2,70 @@
 <div id="abilities" class="container">
   <mat-card ngClass="{{character.primeAbility() === 'strength' ? 'prime' : ''}}">
     <h4>Strength</h4>
+    <button (click)="changeAbility('strength',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.strength}}<span
       *ngIf="character.primeAbility() == 'strength'"> + {{character.getLevel()}}</span></strong>
+    <button (click)="changeAbility('strength',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
     <p class="prime-text" *ngIf="character.primeAbility() == 'strength'">Prime</p>
+
   </mat-card>
   <mat-card ngClass="{{character.primeAbility() === 'intelligence' ? 'prime' : ''}}">
     <h4>Intelligence</h4>
+    <button (click)="changeAbility('intelligence',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.intelligence}}<span
       *ngIf="character.primeAbility() == 'intelligence'"> + {{character.getLevel()}}</span></strong>
+    <button (click)="changeAbility('intelligence',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
     <p class="prime-text" *ngIf="character.primeAbility() == 'intelligence'">Prime</p>
   </mat-card>
   <mat-card ngClass="{{character.primeAbility() === 'wisdom' ? 'prime' : ''}}">
     <h4>Wisdom</h4>
+    <button (click)="changeAbility('wisdom',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.wisdom}}<span
       *ngIf="character.primeAbility() == 'wisdom'"> + {{character.getLevel()}}</span></strong>
+    <button (click)="changeAbility('wisdom',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
     <p class="prime-text" *ngIf="character.primeAbility() == 'wisdom'">Prime</p>
   </mat-card>
   <mat-card>
     <h4>Dexterity</h4>
+    <button (click)="changeAbility('dexterity',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.dexterity}}</strong>
+    <button (click)="changeAbility('dexterity',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-card>
   <mat-card>
     <h4>Constitution</h4>
+    <button (click)="changeAbility('constitution',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.constitution}}</strong>
+    <button (click)="changeAbility('constitution',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-card>
   <mat-card>
     <h4>Charisma</h4>
+    <button (click)="changeAbility('charisma',-1)" mat-icon-button color="warn">
+      <mat-icon>remove</mat-icon>
+    </button>
     <strong>{{character.abilities.charisma}}</strong>
+    <button (click)="changeAbility('charisma',1)" mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-card>
 </div>
 <div class="container">
