--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -22,7 +22,7 @@
         <mat-list-item>
           <mat-form-field>
             <mat-label>Name:</mat-label>
-            <input matInput [(ngModel)]="character.name" />
+            <input matInput [(ngModel)]="character.name"/>
           </mat-form-field>
         </mat-list-item>
         <mat-list-item>
@@ -71,7 +71,7 @@
       <mat-list-item><span>Profession:</span> {{character.profession}} </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item><span>Speaks:</span>
-        {{character.known_languages.concat(',')}}
+        {{character.known_languages.concat(' ')}}
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
@@ -213,13 +213,30 @@
   </mat-card>
   <mat-card>
     <h4>Hit Points</h4>
-    <strong>{{character.current_hp}}/{{character.total_hp}}</strong>
+    <strong><span class="current-hp">{{character.current_hp}}</span> / {{character.total_hp}}</strong>
+    <div id="hp-area">
+      <button [disabled]="character.current_hp==character.total_hp" (click)="changeCharacter('current_hp',1)" class="hp-button current-add" mat-mini-fab color="primary">
+        <mat-icon>add</mat-icon>
+      </button>
+      <button (click)="changeCharacter('current_hp',-1)" class="hp-button current-remove" mat-mini-fab color="warn">
+        <mat-icon>remove</mat-icon>
+      </button>
+
+      <button (click)="changeCharacter('total_hp',1)" class="hp-button total-add" mat-mini-fab color="accent">
+        <mat-icon>add</mat-icon>
+      </button>
+      <button (click)="changeCharacter('total_hp', -1)" class="hp-button current-remove" mat-mini-fab color="accent">
+        <mat-icon>remove</mat-icon>
+      </button>
+    </div>
   </mat-card>
   <mat-card>
     <h4>Armor Class</h4>
     <div id="armor-class">
       <div>
+        <button (click)="changeCharacter('armor_class', -1)" color="warn" mat-icon-button class="remove-ac-button"><mat-icon>remove</mat-icon></button>
         <strong>{{character.armor_class}}</strong>
+        <button (click)="changeCharacter('armor_class', 1)" color="primary" mat-icon-button class="add-ac-button"><mat-icon>add</mat-icon></button>
       </div>
       <div *ngIf="!character.shield">
         <strong>{{character.armor_class - 1}}</strong>
