--- a/src/app/show-character/character-purse/character-purse.component.sass
+++ b/src/app/show-character/character-purse/character-purse.component.sass
@@ -3,3 +3,12 @@
   justify-content: space-between
   mat-card
     width: 25%
+
+.mat-list-actions
+  position: absolute
+  right: 12px
+  bottom: 4px
+.purse-info-icon
+  position: absolute
+  top: 4px
+  right: 4px
