--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,8 +1,9 @@
 <div>
-  <character-overview ></character-overview>
-  <character-attributes ></character-attributes>
-  <character-experience ></character-experience>
-  <character-purse ></character-purse>
-  <character-inventory ></character-inventory>
-  <character-notes ></character-notes>
+  <character-overview [character]="character"></character-overview>
+  <character-attributes [character]="character"></character-attributes>
+  <character-experience [character]="character"></character-experience>
+  <character-purse [character]="character"></character-purse>
+  <character-spell-book [character]="character"></character-spell-book>
+  <character-inventory [character]="character"></character-inventory>
+  <character-notes [character]="character"></character-notes>
 </div>
