--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <h1> Developer Edit Mode </h1>
+  <p>If you started a cleric or magic user before the spell components were installed click this button to update your character raw
+  <strong>Pressing this button will erase your spellbook and spells if you already have them.</strong><br />
+  <button mat-raised-button (click)="installSpells()"color="warn">Install Spells</button>
+  </p>
   <p> While this project is under active development and some key features are missing from the proper UI this view will
     exist to let you tweak and update your character by editing the raw JSON</p>
   <strong>You can mess up your character and cause unusual behavior. Please save your character before making changes</strong>
